# blog

./: Cargo.toml  README.md  build.rs  package-lock.json  package.json  tailwind.config.js
assets/css/: style.css
proptest-regressions/: page.txt
src/: config.rs  controllers.rs  main.rs  page.rs  router.rs
src/page/: index.rs
templates/: root.html
