[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11.1"
axum = "0.6.8"
hyper = { version = "0.14.24", features = ["full"] }
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "fs"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
proptest = "1.0.0"
walkdir = "2.3.2"
scraper = "0.14.0"
